--- a/Python/Alpha/findApartment.ipynb
+++ b/Python/Alpha/findApartment.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# [Trinnect] HFS Refresher\n",
+    "# [Trinnect] HFS Room Selection Refresher\n",
     "## I want to find a cedar apartment!!\n",
     "#### However, it is full. So what should I do?\n",
     "#### Python will help!\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,17 +33,17 @@
     "import winsound\n",
     "\n",
     "# Define mailing destinations.\n",
-    "mailing_email = 'hongjunwu@hotmail.com'  # Example: 'excited@elder.cn'\n",
-    "mailing_password = 'wepa4RE2'  # Example: 'high_level_19260817'\n",
+    "mailing_email = ''  # Example: 'excited@elder.cn'\n",
+    "mailing_password = ''  # Example: 'high_level_19260817'\n",
     "mailing_list = []  # Leave this blank\n",
     "smtp_server = 'smtp-mail.outlook.com'  # Example: 'smtp-mail.outlook.com' (For Microsoft)\n",
     "smtp_port = 587  # Example: 587 (For Microsoft)\n",
     "\n",
     "# Mailing list\n",
-    "mailing_list.append('hongjunwu@hotmail.com')  # Example: 'baohua_zhang@naive.hk'\n",
-    "mailing_list.append('wd22@uw.edu')  \n",
-    "mailing_list.append('xiaq2@uw.edu')\n",
-    "mailing_list.append('zechez2@uw.edu')\n",
+    "mailing_list.append('')  # Example: 'baohua_zhang@naive.hk'\n",
+    "mailing_list.append('')  \n",
+    "mailing_list.append('')\n",
+    "mailing_list.append('')\n",
     "\n",
     "\n",
     "# Define a messageBox to pop up.\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
