--- a/Python/notify_HFS/findApartment.ipynb
+++ b/Python/notify_HFS/findApartment.ipynb
@@ -42,7 +42,7 @@
     "\n",
     "# Mailing list\n",
     "mailing_list.append('')  # Example: 'baohua_zhang@naive.hk'\n",
-    "mailing_list.append('')  \n",
+    "mailing_list.append('')  # Example: 'jianhua_dong@hongkong.hk'\n",
     "mailing_list.append('')\n",
     "mailing_list.append('')\n",
     "\n",
